--- a/prop-solver/frontend/truthTable.html
+++ b/prop-solver/frontend/truthTable.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> 
 </head>
 <body>
+    <div class="container">
+        <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">  
+          <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+            <li><a href="index.html" class="nav-link px-2 link-secondary">Home</a></li>
+            <li><a href="truthtable.html" class="nav-link px-2">Truth Table</a></li>
+            <li><a href="resolution.html" class="nav-link px-2">Resolution</a></li>
+          </ul>
+        </header>
+      </div>
     <div id="messages"></div>
     <div class="container mt-4"> 
         <div class="input-group mb-3"> 
