Request Parsing Working

--- a/prop-solver/frontend/truthTable.html
+++ b/prop-solver/frontend/truthTable.html
@@ -31,7 +31,7 @@
                 <button class="btn btn-outline-secondary" type="button"onclick="appendToInput('(')"> ( </button>
                 <button class="btn btn-outline-secondary" type="button"onclick="appendToInput(')')"> ) </button>  
                 <button class="btn btn-outline-secondary" type="button" onclick="clearInput()">Clear</button>
-                <button class="btn btn-outline-secondary" type="button" onclick="sendProposition()">Submit</button>
+                <button class="btn btn-outline-secondary" type="button" onclick="sendProposition('t')">Submit</button>
             </div>
         </div>
     </div>
