Implication Input Fixed

--- a/prop-solver/frontend/truthTable.html
+++ b/prop-solver/frontend/truthTable.html
@@ -27,7 +27,7 @@
                 <button class="btn btn-outline-secondary" type="button" onclick="appendToInput('And ')">And</button>
                 <button class="btn btn-outline-secondary" type="button" onclick="appendToInput('Or ')">Or</button>
                 <button class="btn btn-outline-secondary" type="button" onclick="appendToInput('Not ')">Not</button>
-                <button class="btn btn-outline-secondary" type="button" onclick="appendToInput('Implies')">Imply</button>
+                <button class="btn btn-outline-secondary" type="button" onclick="appendToInput('Imply ')">Imply</button>
                 <button class="btn btn-outline-secondary" type="button"onclick="appendToInput('(')"> ( </button>
                 <button class="btn btn-outline-secondary" type="button"onclick="appendToInput(')')"> ) </button>  
                 <button class="btn btn-outline-secondary" type="button" onclick="clearInput()">Clear</button>
