--- a/prop-solver/frontend/resolution.html
+++ b/prop-solver/frontend/resolution.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Logic Solver</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> 
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
@@ -26,7 +27,7 @@
               <button class="btn btn-outline-secondary" type="button" onclick="appendToInput('And ')">And</button>
               <button class="btn btn-outline-secondary" type="button" onclick="appendToInput('Or ')">Or</button>
               <button class="btn btn-outline-secondary" type="button" onclick="appendToInput('Not ')">Not</button>
-              <button class="btn btn-outline-secondary" type="button" onclick="appendToInput('Implies ')">Imply</button>
+              <button class="btn btn-outline-secondary" type="button" onclick="appendToInput('Imply ')">Imply</button>
               <button class="btn btn-outline-secondary" type="button" onclick="appendToInput('(')"> ( </button>
               <button class="btn btn-outline-secondary" type="button" onclick="appendToInput(')')"> ) </button>  
               <button class="btn btn-outline-secondary" type="button" onclick="clearInput()">Clear</button>
@@ -37,11 +38,19 @@
 
     <div id="output" class="container mt-5"></div>
 
-    <!-- Add buttons for conjElimL and conjElimR -->
-    <div class="container mt-3">
-        <button class="btn btn-primary mr-2" onclick="sendProposition('r 1')">Conjunction Elimination (L)</button>
-        <button class="btn btn-primary" onclick="sendProposition('r 2')">Conjunction Elimination (R)</button>
+
+    <div class="container mt-4" style="padding-right: 15px;">
+        <div class="d-flex justify-content-end"> 
+            <div class="btn-group-vertical" role="group" aria-label="Vertical button group">
+                <button class="btn btn-outline-secondary" onclick="sendProposition('r 4')"> Assumption</button>
+                <button class="btn btn-outline-secondary" onclick="sendProposition('r 1')">Conjunction Elimination (L)</button>
+                <button class="btn btn-outline-secondary" onclick="sendProposition('r 2')">Conjunction Elimination (R)</button>
+                <button class="btn btn-outline-secondary" onclick="sendProposition('r 3')"> Implication Introduction</button>
+            </div>
+        </div>
+    </div>>
     </div>
+    
     
     <script src="script.js"></script>
 </body>
