More buttons added

--- a/prop-solver/frontend/resolution.html
+++ b/prop-solver/frontend/resolution.html
@@ -46,12 +46,15 @@
 
         <!-- Add buttons for conjElimL and conjElimR -->
         <div class="btn-group-vertical" role="group" aria-label="Vertical button group">
-            <button class="btn btn-outline-secondary mb-2" onclick="sendProposition('r 1')">Conjunction Elimination (L)</button>
+            <button class="btn btn-outline-secondary" onclick="sendProposition('r 1')">Assumption</button>
+            <button class="btn btn-outline-secondary" onclick="sendProposition('r 1')">Conjunction Elimination (L)</button>
             <button class="btn btn-outline-secondary" onclick="sendProposition('r 2')">Conjunction Elimination (R)</button>
+            <button class="btn btn-outline-secondary" onclick="sendProposition('r 2')">Conjunction Introduction</button>
+            <button class="btn btn-outline-secondary" onclick="sendProposition('r 2')">Implication Introduction</button>
         </div>
     </div>
     </div>
-    
+
     
     <script src="script.js"></script>
 </body>
