--- a/prop-solver/frontend/resolution.html
+++ b/prop-solver/frontend/resolution.html
@@ -48,7 +48,7 @@
             <button class="btn btn-outline-secondary" onclick="openInputBox('Assumption')">Assumption</button>
             <button class="btn btn-outline-secondary" onclick="openInputBox('Conjunction Elimination (L)')">Conjunction Elimination (L)</button>
             <button class="btn btn-outline-secondary" onclick="openInputBox('Conjunction Elimination (R)')">Conjunction Elimination (R)</button>
-            <button class="btn btn-outline-secondary" onclick="sendProposition('r 2')">Conjunction Introduction</button>
+            <button class="btn btn-outline-secondary" onclick="openInputBox('Conjunction Introduction')">Conjunction Introduction</button>
             <button class="btn btn-outline-secondary" onclick="sendProposition('r 2')">Implication Introduction</button>
         </div>
     </div>
@@ -92,6 +92,30 @@
             <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             <button type="button" class="btn btn-primary" onclick="sendResolution()">Send</button>
+            </div>
+        </div>
+        </div>
+    </div>
+
+    <!-- Introduction Modal -->
+    <div class="modal fade" id="intModal" tabindex="-1" role="dialog" aria-labelledby="intModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+            <h5 class="modal-title" id="intModalLabel">Pick Proposition</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            </div>
+            <div class="modal-body">
+                <select id="stepDropdown1" class="form-control">
+                </select>
+                <select id="stepDropdown2" class="form-control">
+                </select>
+            </div>
+            <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary" onclick="sendIntroduction()">Send</button>
             </div>
         </div>
         </div>
