--- a/prop-solver/frontend/resolution.html
+++ b/prop-solver/frontend/resolution.html
@@ -27,9 +27,9 @@
               <button class="btn btn-outline-secondary" type="button" onclick="appendToInput('And ')">And</button>
               <button class="btn btn-outline-secondary" type="button" onclick="appendToInput('Or ')">Or</button>
               <button class="btn btn-outline-secondary" type="button" onclick="appendToInput('Not ')">Not</button>
-              <button class="btn btn-outline-secondary" type="button" onclick="appendToInput('Imply ')">Imply</button>
-              <button class="btn btn-outline-secondary" type="button" onclick="appendToInput('(')"> ( </button>
-              <button class="btn btn-outline-secondary" type="button" onclick="appendToInput(')')"> ) </button>  
+              <button class="btn btn-outline-secondary" type="button" onclick="appendToInput('Implies ')">Implies</button>
+              <button class="btn btn-outline-secondary" type="button" onclick="appendToInput('( ')"> ( </button>
+              <button class="btn btn-outline-secondary" type="button" onclick="appendToInput(') ')"> ) </button>  
               <button class="btn btn-outline-secondary" type="button" onclick="clearInput(); clearSteps()">Clear</button>
               <button class="btn btn-outline-secondary" type="button" onclick="createSteps()">Submit</button>
           </div>
