Tidied Truth Tables

--- a/prop-solver/frontend/truthTable.html
+++ b/prop-solver/frontend/truthTable.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Logic Solver</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> 
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
@@ -15,8 +16,7 @@
             <li><a href="resolution.html" class="nav-link px-2">Resolution</a></li>
           </ul>
         </header>
-      </div>
-    <div id="messages"></div>
+    </div>
     <div class="container mt-4"> 
         <div class="input-group mb-3"> 
             <input type="text" id="expressionInput" class="form-control" placeholder="Enter a Proposition">
