Implication Introduction Working

--- a/prop-solver/frontend/resolution.html
+++ b/prop-solver/frontend/resolution.html
@@ -49,7 +49,7 @@
             <button class="btn btn-outline-secondary" onclick="openInputBox('Conjunction Elimination (L)')">Conjunction Elimination (L)</button>
             <button class="btn btn-outline-secondary" onclick="openInputBox('Conjunction Elimination (R)')">Conjunction Elimination (R)</button>
             <button class="btn btn-outline-secondary" onclick="openInputBox('Conjunction Introduction')">Conjunction Introduction</button>
-            <button class="btn btn-outline-secondary" onclick="sendProposition('r 2')">Implication Introduction</button>
+            <button class="btn btn-outline-secondary" onclick="openInputBox('Implication Introduction')">Implication Introduction</button>
         </div>
     </div>
     </div>
