--- a/prop-solver/frontend/resolution.html
+++ b/prop-solver/frontend/resolution.html
@@ -50,7 +50,8 @@
             <button class="btn btn-outline-secondary" onclick="openInputBox('Conjunction Elimination (R)')">Conjunction Elimination (R)</button>
             <button class="btn btn-outline-secondary" onclick="openInputBox('Conjunction Introduction')">Conjunction Introduction</button>
             <button class="btn btn-outline-secondary" onclick="openInputBox('Implication Introduction')">Implication Introduction</button>
-            <button class="btn btn-outline-secondary" onclick="openInputBox('Disjunction Introduction')">Disjunction Introduction</button>
+            <button class="btn btn-outline-secondary" onclick="openInputBox('Disjunction Introduction (L)')">Disjunction Introduction (L)</button>
+            <button class="btn btn-outline-secondary" onclick="openInputBox('Disjunction Introduction (R)')">Disjunction Introduction (R)</button>
         </div>
     </div>
     </div>
