De Morgan's Law implemented

--- a/prop-solver/frontend/resolution.html
+++ b/prop-solver/frontend/resolution.html
@@ -52,6 +52,7 @@
             <button class="btn btn-outline-secondary" onclick="openInputBox('Implication Introduction')">Implication Introduction</button>
             <button class="btn btn-outline-secondary" onclick="openInputBox('Disjunction Introduction (L)')">Disjunction Introduction (L)</button>
             <button class="btn btn-outline-secondary" onclick="openInputBox('Disjunction Introduction (R)')">Disjunction Introduction (R)</button>
+            <button class="btn btn-outline-secondary" onclick="openInputBox('Apply DML')">De Morgan's Law</button>
         </div>
     </div>
     </div>
