--- a/prop-solver/frontend/resolution.html
+++ b/prop-solver/frontend/resolution.html
@@ -53,6 +53,7 @@
             <button class="btn btn-outline-secondary" onclick="openInputBox('Disjunction Introduction (L)')">Disjunction Introduction (L)</button>
             <button class="btn btn-outline-secondary" onclick="openInputBox('Disjunction Introduction (R)')">Disjunction Introduction (R)</button>
             <button class="btn btn-outline-secondary" onclick="openInputBox('Apply DML')">De Morgan's Law</button>
+            <button class="btn btn-outline-secondary" onclick="openInputBox('Modus Ponens')">Implication Elimination</button>
         </div>
     </div>
     </div>
