--- a/prop-solver/frontend/index.html
+++ b/prop-solver/frontend/index.html
@@ -38,6 +38,6 @@
 
     <div id="output"></div>
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
