SAT solver page set up

--- a/prop-solver/frontend/resolution.html
+++ b/prop-solver/frontend/resolution.html
@@ -14,6 +14,7 @@
             <li><a href="index.html" class="nav-link px-2 link-secondary">Home</a></li>
             <li><a href="truthtable.html" class="nav-link px-2">Truth Table</a></li>
             <li><a href="resolution.html" class="nav-link px-2">Resolution</a></li>
+            <li><a href="satSolver.html" class="nav-link px-2">SAT Solver</a></li>
           </ul>
         </header>
     </div>
