--- a/prop-solver/frontend/satSolver.html
+++ b/prop-solver/frontend/satSolver.html
@@ -32,7 +32,7 @@
                 <button class="btn btn-outline-secondary" type="button"onclick="appendToInput('( ')"> ( </button>
                 <button class="btn btn-outline-secondary" type="button"onclick="appendToInput(') ')"> ) </button>  
                 <button class="btn btn-outline-secondary" type="button" onclick="clearInput()">Clear</button>
-                <button class="btn btn-outline-secondary" type="button" onclick="sendProposition('t')">Submit</button>
+                <button class="btn btn-outline-secondary" type="button" onclick="sendSATProp('r 9')">Submit</button>
             </div>
         </div>
     </div>
