BiDirection working for CNF and added to all front end pages

--- a/prop-solver/frontend/resolution.html
+++ b/prop-solver/frontend/resolution.html
@@ -29,6 +29,7 @@
               <button class="btn btn-outline-secondary" type="button" onclick="appendToInput('Or ')">Or</button>
               <button class="btn btn-outline-secondary" type="button" onclick="appendToInput('Not ')">Not</button>
               <button class="btn btn-outline-secondary" type="button" onclick="appendToInput('Imply ')">Imply</button>
+              <button class="btn btn-outline-secondary" type="button" onclick="appendToInput('BiImply ')">BiImply</button>
               <button class="btn btn-outline-secondary" type="button" onclick="appendToInput('( ')"> ( </button>
               <button class="btn btn-outline-secondary" type="button" onclick="appendToInput(') ')"> ) </button>  
               <button class="btn btn-outline-secondary" type="button" onclick="clearInput(); clearSteps()">Clear</button>
