Modus Tolens (Imp Elim) Added

--- a/prop-solver/frontend/resolution.html
+++ b/prop-solver/frontend/resolution.html
@@ -55,7 +55,8 @@
             <button class="btn btn-outline-secondary" onclick="openInputBox('Disjunction Introduction (L)')">Disjunction Introduction (L)</button>
             <button class="btn btn-outline-secondary" onclick="openInputBox('Disjunction Introduction (R)')">Disjunction Introduction (R)</button>
             <button class="btn btn-outline-secondary" onclick="openInputBox('Apply DML')">De Morgan's Law</button>
-            <button class="btn btn-outline-secondary" onclick="openInputBox('Modus Ponens')">Implication Elimination</button>
+            <button class="btn btn-outline-secondary" onclick="openInputBox('Modus Ponens')">Modus Ponens</button>
+            <button class="btn btn-outline-secondary" onclick="openInputBox('Modus Tolens')">Modus Tolens</button>
         </div>
     </div>
     </div>
