--- a/prop-solver/frontend/satSolver.html
+++ b/prop-solver/frontend/satSolver.html
@@ -39,7 +39,7 @@
     </div>
 
     <div id="output"></div>
-    <div id="tree"></div>
+    <div id="tree" class="row justify-content-center"></div>
 
     <script src="js/script.js"></script>
 </body>
