--- a/prop-solver/frontend/satSolver.html
+++ b/prop-solver/frontend/satSolver.html
@@ -11,8 +11,7 @@
     <div class="container">
         <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">  
           <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-            <li><a href="index.html" class="nav-link px-2 link-secondary">Home</a></li>
-            <li><a href="truthtable.html" class="nav-link px-2">Truth Table</a></li>
+            <li><a href="index.html" class="nav-link px-2">Truth Table</a></li>
             <li><a href="resolution.html" class="nav-link px-2">Resolution</a></li>
             <li><a href="satSolver.html" class="nav-link px-2">SAT Solver</a></li>
           </ul>
